--- a/Resources/Localizable.xcstrings
+++ b/Resources/Localizable.xcstrings
@@ -819,7 +819,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Create a custom WebClip"
+            "value" : "Custom WebClip"
           }
         },
         "ja" : {
